<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <!--Avatar-->
    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="@dimen/_80mdp"
        android:layout_height="@dimen/_80mdp"
        android:layout_marginTop="@dimen/_50mdp"
        android:src="@drawable/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:layout_marginVertical="@dimen/_50mdp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/imageAvatar"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:layout_marginVertical="@dimen/_20mdp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:startIconDrawable="@drawable/ic_round_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30mdp"
        android:layout_marginVertical="@dimen/_20mdp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/philippineSilver"
        app:startIconDrawable="@drawable/ic_round_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:textColor="@color/philippineSilver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14font_mdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50mdp"
        android:layout_marginTop="@dimen/_40mdp"
        android:fontFamily="sans-serif-light"
        android:text="@string/submit"
        android:textColor="@color/gunmetal"
        android:textSize="@dimen/_18font_mdp"
        app:cornerRadius="@dimen/_4mdp"
        android:backgroundTint="@color/crayola"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <!--progress bar-->
    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="@dimen/_20mdp"
        android:layout_height="@dimen/_20mdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toTopOf="@+id/btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>